@@ -1,11 +1,14 @@
 4.1	svycontrast()'s improvements for statistics with replicates are now also there with
 	svyby(), for domain comparisons (Robert Baskin)
 
-	svyttest() now gives an error if the binary group variable isn't binary
+	svyttest() now gives an error message if the binary group variable isn't binary
 	(for StackOverflow 60930323)
 
 	confint.svyglm Wald-type intervals now correctly label the columns (eg 2.5%, 97.5%)
 	(for Molly Petersen)
+
+	svyolr() using linearisation had the wrong standard errors for intercepts
+	other than the first, if extracted using vcov (it was correct in summary() output)
 
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
